# num_util

./: README.md  anal_sim_util.py  astro_util.py  const_util.py  coord_util.py  math_util.py  ml_util.py  numerical_util.py  plot_util.py  pyproject.toml  rascas_util.py
anal_dat/: read_dat_util.py
astro/: astro_obj_util.py  dust_util.py  obs_util.py
misc/: decorate.py  decorator.py
misc/useful_code/: check_file_is_empty.sh
mpl_style_sheet/: note.txt  pre.mplstyle  pub.mplstyle
num_util/: __init__.py  const_util.py  gen_util.py  general_usage.ipynb  path_info.py
num_util.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
num_util/anal_dat/: __init__.py  read_dat_template.py  read_dat_util.py
num_util/astro/: CBD.py  __init__.py  astro_obj_util.py  astro_rel.py  astro_util.py  dust_util.py  metal_util.py  obs_util.py  tele_util.py
num_util/cloudy/: Tibor_utilities.py  cloudy_in.py  cloudy_out.py  sim_936.in
num_util/math_func/: __init__.py  arr_util.py  coord_util.py  math_util.py
num_util/misc/: __init__.py  debug.py  decorate.py  some_calculations.ipynb
num_util/ml/: __init__.py  baye_util.py  ml_util.py
num_util/phys/: __init__.py  dim_anal.py
num_util/plot/: __init__.py  comp_plot.py  plot_util.py
num_util/plot/plot_template/: plot_template.ipynb
num_util/rascas/: Lya_obs.ipynb  intrinsic_lya_test.ipynb  rascas_util.py
num_util/sim/: __init__.py  anal_arepo_sim_util.py  anal_ramses_sim_util.py  sim_gen.py
phys/: formula.py
plot/: comp_plot.py
plot/plot_template/: plot_template.py
sim/: anal_arepo_sim_util.py
test_code/: Test.ipynb
(+2 files in other folders)
